--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,10 @@
-<div class="container bg">
+<div class='container'>
+<!-- <div class="container bg">
     <h1>Welcome Admin</h1>
     
 </div>
-    
-<app-get-artists ></app-get-artists>
-
-
-<br>
+     -->
+    <div class='admin'>
+        <app-get-artists ></app-get-artists>
+    </div>
+</div>
