--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="header-page-authStatus">
                 <span *ngIf="artistIsAuthenticated">
-                        {{ artistInfo.firstName}}
+                        <!-- {{profile.artist.firstName}} -->
                         <span class="divider">|</span>
                         <button mat-button *ngIf="artistIsAuthenticated" class='regButton'>Logout</button>
                     </span>
