styled and displayed auth status

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,5 +1,5 @@
 .admin {
-    /* min-height: 500px; */
+    min-height: 500px;
     min-width: 1150px;
     display: flex;
     justify-content: center;
