--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -6,11 +6,21 @@ header {
     
 }
 
+
+
+.navContainer {
+  display: flex;
+  justify-content: center;
+  margin-left: -45%;
+
+}
+
 .mainContainer {
   size:100%; 
 }
 
 section {
+    min-height: 800px;
     height: 100%;
     // width:100%;
     size: 100%;
@@ -29,9 +39,14 @@ section {
     float: right;
 }
 
+.name {
+  text-decoration: none;
+  color: black;
+}
+
 nav {
-    justify-self: left;
-    margin-left: -7em;
+    justify-content: center;
+    // margin-left: -7em;
     margin-top: 1.5em;
     height: 5px;
     font-weight: bold;
@@ -46,14 +61,14 @@ ul {
 }
 
 li {
-    float: left;
+    // float: left;
     // margin-top: .2em;
     margin-right: 1em;
     list-style-type: none;
     
 }
 
-a {
+.logo {
     padding: 1.5em;
     text-transform: uppercase;
     font-size: .8em;
@@ -69,31 +84,31 @@ li {
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
+  // position: relative;
   overflow: hidden;
 }
-li:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #204a82;
-  height: 4px;
-  -webkit-transform: translateY(4px);
-  transform: translateY(4px);
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-li:hover:before, li:focus:before, li:active:before {
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-}
+// li:before {
+//   content: "";
+//   position: absolute;
+//   z-index: -1;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background: #204a82;
+//   height: 4px;
+//   -webkit-transform: translateY(4px);
+//   transform: translateY(4px);
+//   -webkit-transition-property: transform;
+//   transition-property: transform;
+//   -webkit-transition-duration: 0.3s;
+//   transition-duration: 0.3s;
+//   -webkit-transition-timing-function: ease-out;
+//   transition-timing-function: ease-out;
+// }
+// li:hover:before, li:focus:before, li:active:before {
+//   -webkit-transform: translateY(0);
+//   transform: translateY(0);
+// }
 
 
 .authButton {
@@ -116,6 +131,10 @@ li:hover:before, li:focus:before, li:active:before {
   // margin-top: -.55em;
   // border-radius: 10em;
   font-size: 12px;
+}
+span {
+  margin: .8em;
+  margin-top: -1em;
 }
 
 button:hover {
@@ -172,6 +191,7 @@ button:hover:before, button:focus:before, button:active:before {
 
   
       a:hover {
+        color: white;
         text-decoration: underline;
       }
       .divider {
