styled and added admin ngIf

--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -17,8 +17,7 @@
     <h2>Find Art</h2>
     <h4></h4>
     <br>
-    <button class="createSkillsButton" routerLink="/create-skill">Share Art</button>
-</div>
+    <h2>Share Art</h2>
 </div>
 <!-- <br/>
 <br/>
