--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,6 +41,6 @@
 <br/>
 
 <div class='loginForm'>
-        <button mat-button class='toggle' routerLink='/signup'>New artist? Register for an account here!</button>
+        <button mat-button class='toggle' routerLink='/signup'>New artist? Register for an account!</button>
 
 </div>
