--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -39,9 +39,13 @@ section {
     float: right;
 }
 
-.name {
-  text-decoration: none;
-  color: black;
+#name {
+  margin-left: 2em;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: 'Montserrat';
+
+
 }
 
 nav {
@@ -123,18 +127,24 @@ li {
   font-family: 'Montserrat';
   margin-top: -.2em;
   // border-radius: 10em;
-  font-size: 12px;
+  // font-size: 12px;
 }
 
 .adminButton {
   font-family: 'Montserrat';
   // margin-top: -.55em;
   // border-radius: 10em;
-  font-size: 12px;
+  // font-size: 12px;
 }
 span {
   margin: .8em;
   margin-top: -1em;
+}
+
+button {
+  font-size: 12px;
+  font-family: 'Montserrat';
+
 }
 
 button:hover {
@@ -182,9 +192,9 @@ button:hover:before, button:focus:before, button:active:before {
     
     &-authStatus {
       color: black;
-      font-size: .8em;
+      // font-size: .8em;
       line-height: 50px;
-      padding: 0 10px;
+      // padding: 0 10px;
       position: absolute;
         right: 0; top: 0;
         margin-top: .5em;
@@ -197,7 +207,8 @@ button:hover:before, button:focus:before, button:active:before {
       .divider {
         display: inline-block;
         opacity: .5;
-        padding: 0 4px;
+        margin-left: -.1em;
+        // padding: 0 4px;
       }
     }
   
