data prepopulated for update

--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -17,7 +17,7 @@
     <h2>Find Art</h2>
     <h4></h4>
     <br>
-    <button class="createSkillsButton" routerLink="/create-skill">Share Art</button>
+    <button class="createSkillsButton" routerLink="/edit/0">Share Art</button>
 </div>
 </div>
 <!-- <br/>
