--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
                         required
                         minlength="3"
                         placeholder="Password"
-                        #email="ngModel">
+                        #password="ngModel">
                     <mat-error *ngIf="email.invalid">Please enter a password.</mat-error>
                 </mat-form-field>
                 </div>
