--- a/src/app/get-artists/get-artists.component.css
+++ b/src/app/get-artists/get-artists.component.css
@@ -14,16 +14,23 @@ h1{
 }
 .card-display {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 
 }
-
-.mat-card{
+/* .admin-card {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    width: 90%;
+} */
+
+mat-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
+    width: 60%;
     margin: 1rem;
 }
 
@@ -32,4 +39,7 @@ h1{
     
 }
 
+.image {
+    margin-left: 2em;
+}
 
