--- a/src/app/get-artists/get-artists.component.html
+++ b/src/app/get-artists/get-artists.component.html
@@ -4,13 +4,15 @@
 <div class="container" >
         <h1> All Artists </h1>
 </div>
-<div>       
+<div class='admin'>       
     <div class="card-display">
-        <mat-card *ngFor='let artist of artists'>
+        <mat-card class='adminCard' *ngFor='let artist of artists'>
             <div class="profile-info">
-                <div>
+                <div class='image'>
                         Add Image here
                 </div>
+                <br/>
+                <br/>
                 <div>
                         <h3>{{artist.firstName}} {{artist.lastName}}</h3>
                         <p> {{artist.email}} </p>
