--- a/src/app/feedback-edit/edit-feedback.component.html
+++ b/src/app/feedback-edit/edit-feedback.component.html
@@ -1,3 +1,4 @@
+<div class='feedbackEdit'>
 <br>
 <mat-card>
     <form [formGroup]="feedbackForm" (ngSubmit)="onFormSubmit()">
@@ -32,8 +33,8 @@
         </mat-form-field>
     </div>
      <button
-    mat-raised-button
-    color="accent"
+    mat-button
     type="submit">ADD FEEDBACK</button>
     </form>
 </mat-card>
+</div>
