--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -24,15 +24,15 @@
         >
           <label>
             Your name:
-            <input type="text" name="name"></input>
+            <input type="text" name="name">
           </label>
           <label>
             Your email:
-            <input type="email" name="_replyto"></input>
+            <input type="email" name="_replyto"><
           </label>
           <label>
             submit
-            <input type="submit" value="send"></input>
+            <input type="submit" value="send">
           </label>
           <!-- your other form fields go here -->
         
