took out what cory pushed in feedback component

--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -9,7 +9,7 @@
 </div>
 
 
-
-<button mat-button (click)="onUpdateArtist(artist.id)"> UPDATE</button>
+<!-- 
+<button mat-button (click)="onUpdateArtist(artist.id)"> UPDATE</button> -->
 <button mat-button (click)="onDeleteArtist(artist.id)"> DELETE</button>
 <!-- Show all Skills below -->
