--- a/src/app/create-skill/create-skill.component.html
+++ b/src/app/create-skill/create-skill.component.html
@@ -74,7 +74,7 @@
                         ngModel 
                         placeholder="Price"
                         #title="ngModel">
-                        <mat-error *ngIf="price.invalid">Please enter a price for your service.</mat-error>
+                        <!-- <mat-error *ngIf="price.invalid">Please enter a price for your service.</mat-error> -->
                 </mat-form-field>
             </div>
      <button
