--- a/src/app/get-artists/get-artists.component.html
+++ b/src/app/get-artists/get-artists.component.html
@@ -22,7 +22,7 @@
                 <div>
                         <button mat-button [routerLink] = "['/artist', artist.id]" class='authButton'>See more about</button>
                         <button mat-button (click)="onDeleteArtist(artist.id)"> DELETE</button>
-                        <button mat-button (click)="onUpdateArtist(artist.id)"> UPDATE</button>
+                        <!-- <button mat-button (click)="onUpdateArtist(artist.id)"> UPDATE</button> -->
                     </div>
             </div>
            
