--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -1,3 +1,5 @@
+
+<div class='container'>
 <div class="bg">
     <br/>
     <br/>
@@ -7,27 +9,27 @@
 <!-- <img class="banner" src="../../assets/bannerNew.jpg"> -->
 </div>
     <br/>
+    <div class="pics">
+            <h4></h4>
+            <!-- <br> -->
+        </div>
 <div class='components'>
 <div class="pics">
-    <img class="artFind" routerLink="/get-skills">
+    <mat-card class='findArt'>
+        <h2 class='findTitle'>Find Art</h2>
+         <img class="artFind" routerLink="/get-skills">
+         <br/>
+         <p>Find artists for your projects!</p>
+    </mat-card>
     <!-- Make the same picture but cut in half -->
-    <img class="artShare" routerLink="/create-skill">
+    <mat-card class='shareArt'>
+        <h2 class='shareTitle'>Share Art</h2>
+        <img class="artShare" routerLink="/create-skill">
+        <br/>
+        <p>Are you an artist? Share your skils and connect with clients!</p> 
+    </mat-card> 
 </div>
-<div class="pics">
-    <h2>Find Art</h2>
-    <h4></h4>
-    <br>
+
 </div>
-    <h2>Share Art</h2>
 </div>
-<!-- <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/> -->
 </div>
