--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -45,7 +45,7 @@
 
 <app-feedback-list></app-feedback-list>
 
-<mat-card class='comments' *ngFor='let fb of feedbacks'>
+<!-- <mat-card class='comments' *ngFor='let fb of feedbacks'>
     <mat-card-content>
         <div>
             <p>Rating: {{fb.rating}}</p>
@@ -61,7 +61,7 @@
 
 <br>
 
-<app-feedback-list></app-feedback-list>
+<app-feedback-list></app-feedback-list> -->
 
             
 
