email booking paragraph

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -20,3 +20,10 @@
 h1{
     justify-content: center;
 }
+/* 
+.adminCard{
+    background-color:white;
+    max-width: 400px;
+    color:red;
+      
+} */
