--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,6 @@
+<!-- <div class="example-container mat-elevation-z8"> -->
 <div class='container'>
+        <!-- <mat-card class="adminCard"> -->
 <!-- <div class="container bg">
     <h1>Welcome Admin</h1>
     
@@ -7,4 +9,6 @@
     <div class='admin'>
         <app-get-artists ></app-get-artists>
     </div>
+    <!-- </mat-card> -->
 </div>
+<!-- </div> -->
