--- a/src/app/myprofile/myprofile.component.css
+++ b/src/app/myprofile/myprofile.component.css
@@ -25,3 +25,12 @@ mat-card{
     min-width: 15em;
   
 }
+
+#btn{
+    text-align:center;
+    margin:0 auto;
+    display:block;
+    border: 3px solid white;
+    background-color:white;
+
+}
