styled home page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class='main'>
 <header>
     <div class='container'>
-        <a routerLink='/' class='logo'>Digital Renaissance</a>
+        <a routerLink='/home' class='logo'>Digital Renaissance</a>
         <div class='navContainer'>
         <nav class='nav' id='nav'>
 
