--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,20 @@
+
+<div class='container'>
 <div class="bg">
-        <br/>
-        <br/>
-    <div class="pics">
-    <div class="banner"></div>
-    
-    <!-- <img class="banner" src="../../assets/bannerNew.jpg"> -->
+    <div class='overlay'>
+        <h1>Believe in your art, like we believe in you</h1>
     </div>
-        <br/>
-    <div class='components'>
-    
+        <div class="video-box">
+                <div class="video">
+                    <video autoplay loop muted><source src='../../assets/Abstract - 20072.mp4' type="video/mp4"></video>
+                </div>
+        </div>
+        <div class='text'>
+        <P>We firmly believe that everyone is an artist. Digital Renaissance was born to connect artists of all types. From the watercolor painter to the jazz musician, Digital Renaissance is the hub that makes it easier for artists to share their talents with the world. Forming connections and drawing inspiration from those around you is as easy as creating an artist profile and reaching out to those with similar passions. </P>
+         </div>
+</div>
+
+    <div class='button'>
+        <button mat-button class='getStarted' routerLink='/login'>Join now!</button>
     </div>
-    <!-- <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/> -->
 </div>
