--- a/src/app/artists/artists.component.css
+++ b/src/app/artists/artists.component.css
@@ -40,9 +40,10 @@
 
 .banner {
     height: 8em;
-    width: 60%;
+    width: 70%;
     background-image: url("../../assets/bannerNew.jpg");
-    background-size: 70%;
+    background-size: 100%;
+    background-repeat: no-repeat;
     background-position: bottom left;
 }
 
