--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,9 +2,23 @@
 .bg {
     background-color: #3b6283;
     background-size: cover;
-    min-height: 500px;
+    min-height: 1000px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 4em;
+    /* padding: 2em; */
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 h2 {
     color: white;
     font-weight: bold;
@@ -41,3 +55,58 @@ h2 {
     border:none;
     color: black;
 }
+
+.overlay {
+    z-index: 2;
+    color: black;
+    font-weight: bold;
+    position: absolute;
+}
+
+h1 {
+    margin-top: -10em;
+    color: white;
+    text-shadow: 2px 2px 2px  black;
+   font-size: 35px;
+}
+
+video {
+background-size: cover;
+opacity: 1;
+position: static;
+top: 0px;
+width: 100%;
+height: 100%;
+left: 0px;
+z-index: 1;
+margin-top: -5em;
+/* margin-left: 8em; */
+}
+
+.text {
+    margin-top: -10em;
+    padding: 1em;
+    margin: 1em;
+    text-align: center;
+}
+
+p {
+    font-size: 20px;
+    line-height: 3;
+    letter-spacing: 3px;
+    color: white;
+}
+
+button {
+    background-color: white;
+    margin-top: 2em;
+    height: 5em;
+    width: 30em;
+    font-size: 17px;
+ }
+ 
+ button:hover {
+     opacity: 0.8;
+     background-color:#193153;
+     color: white;
+   }
