--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,6 +1,8 @@
 <div class="bannerHeading"> My Profile
     </div>
-    <button mat-stroked-button color="primary" id ="btn" routerLink="/create-skill">Add new Skills!</button>
+    <div class='button'>
+    <button mat-button id ="btn" routerLink="/create-skill">Add new Skills!</button>
+    </div>
         <div class="banner">
             <div class="bannerText" *ngFor='let oneArtistSkill of oneArtistSkills'>
             <mat-card>
