added random images and styled

--- a/src/app/get-artists/get-artists.component.html
+++ b/src/app/get-artists/get-artists.component.html
@@ -9,7 +9,7 @@
         <mat-card class='adminCard' *ngFor='let artist of artists'>
             <div class="profile-info">
                 <div class='image'>
-                        Add Image here
+                        <img mat-card-image alt="profile picture" src='https://source.unsplash.com/random/?art/'>
                 </div>
                 <br/>
                 <br/>
