--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -5,10 +5,10 @@
     <mat-card>
     <h3>{{artist.firstName}} {{artist.lastName}}</h3>
     <p> {{artist.email}} </p>
-    <span><h3>Role:</h3> <p>{{artist.role}}</p></span>
+    <!-- <span><h3>Role:</h3> <p>{{artist.role}}</p></span> -->
     <!-- <p>{{artist.id}}</p> -->
     <br/>
-    <button mat-button routerLink='artist/artist.id'> Artist Profile</button>
+    <button mat-button (click)='goToArtist()'> Artist Profile</button>
     <button mat-button (click)="onDeleteArtist(artist.id)"> Delete</button>
     </mat-card>
 </div>
