--- a/src/app/get-artists/get-artists.component.css
+++ b/src/app/get-artists/get-artists.component.css
@@ -32,7 +32,7 @@ mat-card{
     flex-wrap: wrap;
     justify-content: center;
     /* align-items: center; */
-    width: 60%;
+    width: 80%;
     margin: 1rem;
 }
 
@@ -42,17 +42,18 @@ mat-card{
 }
 
 .image {
-    margin: 2em;
+    margin: 5%;
     padding: .5em;
 }
 
 .artist {
-    margin: 1em;
+    margin: 5%;
     padding: .5em;
+    text-align: center;
 }
 
 .buttons {
-    margin: 2em;
+    margin: 5%;
     padding: .5em; 
     display: flex;
     flex-direction: column;
