--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     width: 80%;
-    margin: 4em;
+    margin: 5em;
     /* padding: 2em; */
 }
 
@@ -61,13 +61,19 @@ h2 {
     color: black;
     font-weight: bold;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    /* width: 100%; */
 }
 
-h1 {
-    margin-top: -10em;
+
+.videoText {
+    /* margin-top: -10%; */
     color: white;
-    text-shadow: 2px 2px 2px  black;
-   font-size: 35px;
+    text-shadow: .2em .2em .2em  black;
+   font-size: 200%;
+    
 }
 
 video {
@@ -90,7 +96,7 @@ margin-top: -5em;
     text-align: center;
 }
 
-p {
+.homeText {
     font-size: 20px;
     line-height: 3;
     letter-spacing: 3px;
