--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -6,7 +6,7 @@
         <div class="banner">
             <div class="bannerText" *ngFor='let oneArtistSkill of oneArtistSkills'>
             <mat-card>
-                <h6> Profile #: {{oneArtistSkill.id}}</h6>
+                <button mat-button class='getSkill' routerLink ='/skill/{{oneArtistSkill.id}}'> Profile #: {{oneArtistSkill.id}}</button>
                 <h5> Artist Name: {{oneArtistSkill.artist.firstName}} {{oneArtistSkill.artist.lastName}}</h5>
                 <h5> 
                         Artist E-mail:
