--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -10,13 +10,20 @@ mat-card {
 
 button {
     background-color: lightgray;
-    margin-top: 2em;
+    /* margin-top: 2em; */
     margin: 1em;
-    width: 30%;
+    /* width: 30%; */
+    text-align: center;
+    display:table-cell;
+    
  }
  
  button:hover {
      opacity: 0.8;
      background-color:#193153;
      color: white;
+   }
+
+li{
+    list-style: none;
    }
