--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -4,7 +4,10 @@
     <br/>
     <br/>
 <div class="pics">
+    <hr/>
 <div class="banner"></div>
+<hr/>
+
 
 <!-- <img class="banner" src="../../assets/bannerNew.jpg"> -->
 </div>
@@ -13,6 +16,7 @@
             <h4></h4>
             <!-- <br> -->
         </div>
+        <hr class='overline'/>
 <div class='components'>
 <div class="pics">
     <mat-card class='findArt'>
@@ -29,6 +33,7 @@
         <p>Are you an artist? Share your skils and connect with clients!</p> 
     </mat-card> 
 </div>
+<hr class='underline'/>
 
 </div>
 </div>
