--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,14 +4,14 @@
     
         <div class="video-box">
                 <div class='overlay'>
-                        <p class='videoText'>Believe in your art, like we believe in you</p>
+                        <!-- <p class='videoText'>Believe in your art, like we believe in you</p> -->
                 </div>
                 <div class="video">
-                    <video autoplay loop muted><source src='../../assets/Abstract - 20072.mp4' type="video/mp4"></video>
+                    <video autoplay loop muted><source src='../../assets/abstract.mp4' type="video/mp4"></video>
                 </div>
         </div>
         <div class='text'>
-        <P class='homeText'>We firmly believe that everyone is an artist. Digital Renaissance was born to connect artists of all types. From the watercolor painter to the jazz musician, Digital Renaissance is the hub that makes it easier for artists to share their talents with the world. Forming connections and drawing inspiration from those around you is as easy as creating an artist profile and reaching out to those with similar passions. </P>
+        <P class='homeText'>We firmly believe that everyone is an artist. Digital Renaissance was born to connect artists of all types. From the watercolor painter to the jazz musician, Digital Renaissance is the hub that makes it easier for artists to share their talents with the world. Forming connections and drawing inspiration from those around you is as easy as creating a profile and reaching out to other artists who are passionate about their crafts. </P>
          </div>
 </div>
 
