--- a/src/app/myprofile/myprofile.component.css
+++ b/src/app/myprofile/myprofile.component.css
@@ -15,15 +15,17 @@
     color:white;
     text-align:center;
     padding: 1em;
+    margin: 1em;
 }
 
 mat-card{
     display:flex;
     flex-direction: column;
-    margin: 1em;
+    margin: 2em;
     padding: 1em;
     min-width: 15em;
     text-align: center;
+    
   
 }
 
@@ -31,7 +33,8 @@ mat-card{
    
     /* border: 3px solid white;
     background-color:white; */
-    margin: 1em;
+    margin: 2em;
+    margin-top: 3em;
 }
 
 .button {
