--- a/src/app/one-skill/one-skill.component.css
+++ b/src/app/one-skill/one-skill.component.css
@@ -24,7 +24,7 @@ button:hover {
   }
 
   .avatar {
-    background-image: url('https://source.unsplash.com/1600x900/?art/1');
+    background-image: url('https://source.unsplash.com/1600x900/?portraits');
     background-size: cover;
 
   }
