--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -13,16 +13,26 @@
             <div>
                 <button mat-button (click)="onDeleteSkillProfile(a.id)">Delete Skill</button>
             </div>
-
         </li>
     </ul>
+
+        <div class="feedback">
+            <ul>
+                <li *ngFor = "let f of artist.buyerFeedbacks">{{f.comment}}
+                    <div>
+                    <button mat-button (click)="onAdminDeleteFeedback(f.id)">Delete Feedback</button>
+                </div>
+                </li>
+            </ul>
+        </div>
+
+    
     <!-- <p>{{artist.skills[0].title}}</p> -->
     <!-- <button mat-button (click)="onDeleteSkillProfile(artist.skill.id)"> Delete Skill #{{artist.skills[0].id}} </button> -->
     <br/>
 
     <button mat-button (click)='goToArtist(artist.id)'> Artist Profile</button>
-    <!-- <button mat-button routerLink='artist/artist.id'> Artist Profile</button> -->
-    <!-- <button mat-button (click)="onDeleteSkillProfile(artist.skill.id)"> Delete Skill </button> -->
+   
     <button mat-button (click)="onDeleteArtist(artist.id)"> Delete Artist</button>
     </mat-card>
 </div>
