--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -3,27 +3,33 @@
 
 <div class='artist'>
     <mat-card>
-    <h3>{{artist.firstName}} {{artist.lastName}}</h3>
-    <p> {{artist.email}} </p>
+    <h1>{{artist.firstName}} {{artist.lastName}}</h1>
+    <h4 type='email'> {{artist.email}} </h4>
     <!-- <span><h3>Role:</h3> <p>{{artist.role}}</p></span> -->
     <!-- <p>{{artist.id}}</p> -->
+    <div class='profile'>
     <h3>Skill Profile(s):</h3>
-    <ul>
+    <div class='skillList'>
+    <ul class='list'>
         <li *ngFor = "let a of artist.skills">{{a.title}} is skill profile # {{a.id}}
-            <div>
-                <button mat-button (click)="onDeleteSkillProfile(a.id)">Delete Skill</button>
+            <div class='delete'>
+                <button mat-button class='deleteButton' (click)="onDeleteSkillProfile(a.id)">Delete Skill</button>
             </div>
-
+            <hr/>
         </li>
     </ul>
+    </div>
+    
     <!-- <p>{{artist.skills[0].title}}</p> -->
     <!-- <button mat-button (click)="onDeleteSkillProfile(artist.skill.id)"> Delete Skill #{{artist.skills[0].id}} </button> -->
     <br/>
-
+    <div class='buttons'>
     <button mat-button (click)='goToArtist(artist.id)'> Artist Profile</button>
     <!-- <button mat-button routerLink='artist/artist.id'> Artist Profile</button> -->
     <!-- <button mat-button (click)="onDeleteSkillProfile(artist.skill.id)"> Delete Skill </button> -->
     <button mat-button (click)="onDeleteArtist(artist.id)"> Delete Artist</button>
+    </div>
+    </div>
     </mat-card>
 </div>
 
