--- a/src/app/feedback-list/feedback-list.component.css
+++ b/src/app/feedback-list/feedback-list.component.css
@@ -1,7 +1,7 @@
 mat-card {
-    min-height: 275px;
+    min-height: 270px;
     margin: 2em;
-    width: 40%;
+    width: 15em;
 }
 button {
     background-color: lightgray;
