--- a/src/app/one-skill/one-skill.component.css
+++ b/src/app/one-skill/one-skill.component.css
@@ -1,13 +1,17 @@
 .skillCard {
     background-color: white;
-
+    /* width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center; */
 }
 
 mat-card {
     text-align: center;
     background-color: white;
-
-    
+    /* justify-self: center;
+     */
 }
 
 .card-header {
